Pagina casi acabada, error de fotos acabado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="header-principal">
             <div class="logo">
-                <img src="imagenes/Logo/Logo.webp" alt="LICOSHOP" class="logo-licoreria">
+                <img src="Imagenes/Logo/Logo.webp" alt="LICOSHOP" class="logo-licoreria">
             </div>
             <div class="buscador">
                 <!--<h2 class="buscador-titulo">¿Qué es lo que buscas?</h2>-->
